osc/fsm: Add outline for using actual fsm
Signed-off-by: guserav <erik.zeiske@hpe.com>

WIP

--- a/ompi/mca/osc/fsm/Makefile.am
+++ b/ompi/mca/osc/fsm/Makefile.am
@@ -18,7 +18,7 @@ fsm_sources = \
 	osc_fsm_active_target.c \
 	osc_fsm_passive_target.c
 
-AM_CPPFLAGS = $(osc_fsm_CPPFLAGS)
+AM_CPPFLAGS = $(osc_fsm_CPPFLAGS) -I$(prefix)/include
 
 # Make the output library in this directory, and name it either
 # mca_<type>_<name>.la (for DSO builds) or libmca_<type>_<name>.la
