osc/fsm: Fix build dependencies introduced in 47ebdd1998412f54032f16743992dd947214ec97
The changes made in 47ebdd1998412f54032f16743992dd947214ec97 were wrong
in the use of the _happy variables to ensure that common/ofi is
buildable.

This is needed since the mtl/ofi and osc/fsm component both depend upon
the common/ofi component.

Furthermore the changes made in 47ebdd1998412f54032f16743992dd947214ec97
were based on the state of code before f5e1a672ccd5db127e85e1e8f6bcfeb8a8b04527.

f5e1a672ccd5db127e85e1e8f6bcfeb8a8b04527 has changed the behaviour of
OPAL_CHECK_OFI and thus the logic provided by common/ofi was not as
expected and thus opal_common_ofi_happy was not set.

In addition to changing OPAL_CHECK_OFI f5e1a672ccd5db127e85e1e8f6bcfeb8a8b04527
has also removed the opal_common_ofi_{CPPFLAGS|LDFLAGS|LIBS} variables.
This means that the introduction of them in 47ebdd1998412f54032f16743992dd947214ec97
was pointless and thus they are removed/replaced in this commit with the
correct variables.

I hope the build dependencies are now fixed properly.

Signed-off-by: guserav <erik.zeiske@hpe.com>

--- a/opal/mca/common/ofi/Makefile.am
+++ b/opal/mca/common/ofi/Makefile.am
@@ -69,13 +69,13 @@ endif
 
 lib@OPAL_LIB_PREFIX@mca_common_ofi_la_SOURCES = $(headers) $(sources)
 lib@OPAL_LIB_PREFIX@mca_common_ofi_la_LDFLAGS = \
-        $(opal_common_ofi_LDFLAGS) \
+        $(opal_ofi_LDFLAGS) \
         -version-info $(libmca_opal_common_ofi_so_version)
-lib@OPAL_LIB_PREFIX@mca_common_ofi_la_LIBADD = $(opal_common_ofi_LIBS)
+lib@OPAL_LIB_PREFIX@mca_common_ofi_la_LIBADD = $(opal_ofi_LIBS)
 
 lib@OPAL_LIB_PREFIX@mca_common_ofi_noinst_la_SOURCES = $(headers) $(sources)
-lib@OPAL_LIB_PREFIX@mca_common_ofi_noinst_la_LDFLAGS = $(opal_common_ofi_LDFLAGS)
-lib@OPAL_LIB_PREFIX@mca_common_ofi_noinst_la_LIBADD = $(opal_common_ofi_LIBS)
+lib@OPAL_LIB_PREFIX@mca_common_ofi_noinst_la_LDFLAGS = $(opal_ofi_LDFLAGS)
+lib@OPAL_LIB_PREFIX@mca_common_ofi_noinst_la_LIBADD = $(opal_ofi_LIBS)
 
 # Conditionally install the header files
 
