--- a/ompi/mca/mtl/ofi/Makefile.am
+++ b/ompi/mca/mtl/ofi/Makefile.am
@@ -77,16 +77,14 @@ mcacomponent_LTLIBRARIES = $(component_install)
 mca_mtl_ofi_la_SOURCES = $(mtl_ofi_sources)
 mca_mtl_ofi_la_LDFLAGS = \
         $(opal_ofi_LDFLAGS) \
-        -module -avoid-version \
-	$(opal_common_ofi_LDFLAGS)
+        -module -avoid-version
 mca_mtl_ofi_la_LIBADD = $(top_builddir)/ompi/lib@OMPI_LIBMPI_NAME@.la \
 	$(OPAL_TOP_BUILDDIR)/opal/mca/common/ofi/lib@OPAL_LIB_PREFIX@mca_common_ofi.la \
-        $(opal_ofi_LIBS) $(opal_common_ofi_LIBS)
+        $(opal_ofi_LIBS)
 
 noinst_LTLIBRARIES = $(component_noinst)
 libmca_mtl_ofi_la_SOURCES = $(mtl_ofi_sources)
 libmca_mtl_ofi_la_LDFLAGS = \
         $(opal_ofi_LDFLAGS) \
-        -module -avoid-version \
-	$(opal_common_ofi_LDFLAGS)
-libmca_mtl_ofi_la_LIBADD = $(opal_ofi_LIBS) $(opal_common_ofi_LIBS)
+        -module -avoid-version
+libmca_mtl_ofi_la_LIBADD = $(opal_ofi_LIBS)
